# Emulators

./: main.c
CHIP8/: CMakeLists.txt  Makefile  a.out  chip8  chip8_soc.cxx  chip8_soc.hxx  logging.hxx  main.cxx
CHIP8/chip8_soc/: CMakeLists.txt  chip8_soc.cxx  chip8_soc.hxx
CHIP8/cpu/: CMakeLists.txt  cpu.cxx  cpu.hxx  isa.cxx  isa.hxx
CHIP8/gfx/: CMakeLists.txt  gfx.cxx  gfx.hxx
CHIP8/memory/: CMakeLists.txt  memory.cxx  memory.hxx
CHIP8/peripherals/: CMakeLists.txt  display.cxx  display.hxx  keypad.cxx  keypad.hxx
